# tauri-test

./: package.json  pnpm-lock-6.0.yaml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs  service.rs
src/views/: first.tsx
