[package]
name = "tauri-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "clipboard-all", "macos-private-api", "window-minimize", "window-hide", "window-unminimize", "window-close", "window-start-dragging", "window-unmaximize", "window-show", "window-maximize", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[source.crates-io]
replace-with = "ali"

[source.ali]
registry = "https://code.aliyun.com/rustcc/crates.io-index"
